<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference android:key="preference_url"
        android:summary="@string/preference_url_summary"
        android:title="@string/preference_url"/>

    <EditTextPreference
    android:key="preference_user_name"
    android:summary="@string/preference_user_name_summary"
    android:title="@string/preference_user_name"/>;

    <EditTextPreference
    android:key="preference_user_password"
    android:password="true"
    android:summary="@string/preference_user_password_summary"
    android:title="@string/preference_user_password_title" />;

    <ListPreference
        android:key="preference_main_bg_color"
        android:title="@string/preference_user_bg_color_title"
        android:entries="@array/color_names"
        android:entryValues="@array/color_values"
        android:summary="@string/preference_user_bg_color_summary"/>

</PreferenceScreen>